--- a/Resources/translations/messages.fr.yml
+++ b/Resources/translations/messages.fr.yml
@@ -1,11 +1,27 @@
 dynamicForm:
   btn:
-    save: Save
-    reset: Reset
+    save: Enregistrer
+    reset: Réinitialiser
+    remove: Supprimer
   bo:
-    formInfo: Form-info
-    name: Name
+    id: ID
+    formInfo: Information du formulaire
+    formList: Liste des formulaires
+    newForm: Créer un nouveau formulaire
+    id: id
+    name: Nom
+    actions: Actions
     description: Description
-    formBuilder: Form-Builder
-    builder: Builder
-    formPreview: Form-preview
+    valueOwnerAlias: Fournisseur de la valeur du propriétaire
+    formBuilder: Générateur de formulaire
+    builder: Générateur
+    formPreview: Aperçu du formulaire  
+    message:
+      success: Formulaire enregistré avec succès
+      remove: Le formulaire avec id = %id% est supprimé avec succès
+      error:   Une erreur est survenue lors de l'enregistrement
+      
+  fo:
+    message:
+      success: Formulaire soumis avec succès
+      error:   Une erreur est survenue lors de l'envoi du formulaire     
