--- a/Resources/translations/messages.fr.yml
+++ b/Resources/translations/messages.fr.yml
@@ -27,6 +27,11 @@ dynamicForm:
       remove: Le formulaire avec id = %id% est supprimé avec succès
       error:   Une erreur est survenue lors de l'enregistrement
       
+  ownerList:
+      id: ID
+      username: Nom d'utilisateur
+      email: Email
+      
   fo:
     message:
       success: Formulaire soumis avec succès
