--- a/Resources/translations/messages.fr.yml
+++ b/Resources/translations/messages.fr.yml
@@ -4,6 +4,7 @@ dynamicForm:
     reset: Réinitialiser
     remove: Supprimer
     edit: Edit
+    ownerList: Liste des propriétaires
     view: Consulter
     return: Retourner
   bo:
